Fix pagination bar on small devices Fix #2008

--- a/src/Wallabag/CoreBundle/Resources/public/themes/material/css/main.css
+++ b/src/Wallabag/CoreBundle/Resources/public/themes/material/css/main.css
@@ -437,6 +437,9 @@ main ul.row {
     .indicator {
         display: none;
     }
+    .pagination li.prev, .pagination li.next {
+        width: auto;
+    }
   }
 
 @media only screen and (min-width : 400px) {
